# swifty-proteins

./: .env.example  README.md  docker-compose.yml
back/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Vagrantfile  diesel.toml
back/database/migrations/2024-06-04-200909_create_users/: up.sql
back/database/migrations/2024-06-04-203900_create_proteins_table/: up.sql
back/database/migrations/2024-06-12-083057_temporary_3d_obj/: up.sql
back/lib/database/: lib.rs  pool.rs  schema.rs
back/lib/database/models/: file.rs  mod.rs  pagination.rs  protein.rs  user.rs
back/lib/database/repository/: mod.rs  protein_repository.rs
back/lib/entity_manager/: Cargo.toml
back/lib/entity_manager/src/: schema.rs
back/lib/local_storage/: Cargo.toml
back/lib/local_storage/src/: lib.rs
back/migrations/2024-05-23-201925_create_users_table/: up.sql
back/migrations/2024-05-28-171323_create_users_table/: up.sql
back/src/: main.rs
back/src/auth/: auth_guard.rs  jwt.rs  mod.rs  sha512.rs  validation_guard.rs
back/src/database/: mod.rs  pool.rs  schema.rs
back/src/database/models/: user.rs
back/src/database/services/: user_service.rs
back/src/local_storage/: mod.rs
back/src/rest/: mod.rs
back/src/rest/model/: error.rs  mod.rs  pagination.rs  protein.rs  user.rs
back/src/rest/preprocessing/: auth_guard.rs  mod.rs  protected_routes_guard.rs  validation_guard.rs
back/src/rest/route/: auth.rs  login.rs  mod.rs  proteins.rs
back/src/rest/routes/: login.rs  proteins.rs
back/src/rest/service/: mod.rs  protein_service.rs  (+1 more)
back/src/routes/: login.rs
(+29 files in other folders)
