[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
local_storage = { path = "lib/local_storage" }
entity_manager = { path = "lib/entity_manager" }
# API
rocket = { version = "0.5.0", features = ["json"] }

## Security
jsonwebtoken = "9.3.0"
rand = "0.8"
base64 = "0.22.1"
hmac-sha512 = "1.1.5"
hex = "0.4.3"

# Utils
lazy_static = "1.4.0"

# toto
gltf = "1.4.1"
