[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
entity_manager = { path = "lib/entity_manager" }
# API
rocket = { version = "0.5.0", features = ["json"] }
validator = "0.18.1"
validator_derive = "0.18.1"

## Security
jsonwebtoken = "9.3.0"
rand = "0.8"
base64 = "0.22.1"
hmac-sha512 = "1.1.5"
hex = "0.4.3"

# Utils
lazy_static = "1.4.0"
regex = "1.5.4"

# Logging
log = "0.4"
env_logger = "0.11.3"
